--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,8 @@
         "thread": "cpp",
         "iterator": "cpp",
         "filesystem": "cpp",
-        "shared_mutex": "cpp"
+        "shared_mutex": "cpp",
+        "queue": "cpp",
+        "future": "cpp"
     }
 }
