add duration & time point
Signed-off-by: dustyface <dustyface@163.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ add_executable(test_synchronize
   src/synchronize/threadsafe_queue.cc
   src/synchronize/packaged_task.cc
   src/synchronize/promise.cc
+  src/synchronize/time.cc
 )
 
 target_link_libraries(
